--- a/Mural/Excalidraw/index.html
+++ b/Mural/Excalidraw/index.html
@@ -23,7 +23,7 @@
     <meta name="image" content="https://excalidraw.com/og-image-2.png" />
 
     <!-- Open Graph / Facebook -->
-    <meta property="og:site_name" content="Excalidraw" />
+    <meta property="og:site_name" content="FlipBoard" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://excalidraw.com" />
     <meta
@@ -144,7 +144,8 @@
     <script>
       window.EXCALIDRAW_ASSET_PATH = "/";
       // setting this so that libraries installation reuses this window tab.
-      window.name = "_excalidraw";
+      // window.name = "_excalidraw";
+      window.name = "FlipBoard Mural";
     </script>
 
     <!-- FIXME: remove this when we update CRA (fix SW caching) -->
